add java_stored_procedure_jvm_options